# faemiyah-demoscene_2019-08_4k-intro_region_de_magallanes

./: .gitignore  CMakeLists.txt  LICENCE  README  README.md  compile.sh  release.sh
rel/: post.frag.glsl  quad.frag.glsl  region_de_magallanes_freebsd-amd64  region_de_magallanes_freebsd-ia32  region_de_magallanes_linux-amd64  region_de_magallanes_linux-ia32_compo_720p_fullscreen  region_de_magallanes_linux-ia32_compo_720p_windowed
src/: dnload.h  header.glsl  header.glsl.hpp  intro.cpp  post.frag.glsl.hpp  quad.frag.glsl  quad.frag.glsl.hpp  synth.asm  synth.h
